--- a/emazon/Views/Home/Index.cshtml
+++ b/emazon/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="margin-top:10%">
         <div class="logo">Emazon</div>
         <div class="welcome-message">Welcome to Emazon - Your ultimate shopping destination!</div>
         <div class="buttons">
