Added Login & Registration buttons. Modified the controller code in C#

--- a/emazon/Views/Authentication/Login.cshtml
+++ b/emazon/Views/Authentication/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Emazon - Welcome";
+    ViewData["Title"] = "Emazon - Login";
 }
 
 <!DOCTYPE html>
@@ -14,11 +14,7 @@
 <body>
     <div class="container" style="margin-top:10%">
         <div class="logo">Emazon</div>
-        <div class="welcome-message">Welcome to Emazon - Your ultimate shopping destination!</div>
-        <div class="buttons">
-            <a href="#" class="btn">Shop Now</a>
-            <a href="#" class="btn">Learn More</a>
-        </div>
+        <div class="welcome-message">Log In</div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
