Modified MVC pattern code. Aligned login and reigster buttons on right side.

--- a/emazon/Views/Home/Index.cshtml
+++ b/emazon/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
         <div class="logo">Emazon</div>
         <div class="welcome-message">Welcome to Emazon - Your ultimate shopping destination!</div>
         <div class="buttons">
-            <a href="#" class="btn">Shop Now</a>
-            <a href="#" class="btn">Learn More</a>
+            <a href="#" class="btn" style="color:white;">Shop Now</a>
+            <a href="#" class="btn" style="color:white;">Learn More</a>
         </div>
     </div>
 
