--- a/emazon/Views/Home/Register.cshtml
+++ b/emazon/Views/Home/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Emazon - Register";
+    ViewData["Title"] = "Emazon - Login";
 }
 
 <!DOCTYPE html>
@@ -9,12 +9,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-
+    <style>
+        .form-container {
+            max-width: 400px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
     <div class="container" style="margin-top:10%">
-        <div class="logo">Emazon</div>
-        <div class="welcome-message">Register with Emazon</div>
+        <div class="logo text-center">Register with Emazon | Welcome New User</div>
+        <div class="welcome-message text-center">Register</div>
+
+        <div class="form-container">
+            <form>
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                </div>
+                <div class="form-group">
+                    <label for="username">E-mail</label>
+                    <input type="text" class="form-control" id="email" placeholder="Enter your Email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block" style="margin: 0 auto;">Login</button>
+            </form>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
